Add uwu parsing

--- a/asphodelos.ipynb
+++ b/asphodelos.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'pulls.csv'\n",
+    "filename = 'asphodelos.csv'\n",
     "df = pd.read_csv(filename)\n",
     "df = df.drop(df.columns[[0]], axis=1)\n",
     "df['Seconds'] = pd.to_timedelta(df['Duration']).astype('timedelta64[s]').astype(int)"
